package go.game.model;

public class Dimensions {
    private int rows;
    private int columns;
    
	public Dimensions(int rows, int columns) {
		super();
		this.rows = rows;
		this.columns = columns;
	}

	public int getRows() {
		return rows;
	}

	public int getColumns() {
		return columns;
	}
   
}

