package go.game.output;


import go.game.model.Board;

public interface Displayable {
	void display(Board boardTable,int boardSize);
}
